# wallet

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: mod.rs
src/controllers/home/: home.rs
src/controllers/middleware/: middleware.rs
src/controllers/pages/: account.rs  dapp.rs  history.rs  index.rs  manage.rs  mod.rs  multi_chain.rs  nfts.rs  phrase.rs  rpc.rs  security.rs  send.rs  settings.rs  token.rs  tokens.rs  transfer.rs  wallet.rs  wallets.rs  welcome.rs
src/controllers/routes/: mod.rs
src/views/: base.html  dapp.html  index.html  message.html  nfts.html  phrase.html  rpc.html  send.html  settings.html  tokens.html  wallet.html  wallets.html  welcome.html
src/views/templates/: dapp.html  index.html  manage.html  multi_chain.html  rpc.html  token.html  transfer.html
tests/: check_login_test.rs  index_test.rs  main_test.rs
