[package]
name = "wallet"
version = "0.1.8"
edition = "2024"

[dependencies]
tera = "1.20.0"
actix-web = "4.10.2"
reqwest = {version = "0.12.15", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}
tokio = {version = "1.44.1", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.140"

[[bin]]
name = "wallet"
path = "src/main.rs"

[lib]
name = "wallet"
path = "src/lib.rs"
